Fixed position of download box (but manual positioning ! still work on small screen).
git-svn-id: https://svn.eiffel.com/eiffelstudio-public/trunk@104527 8089f293-4706-0410-a29e-feb5c42a2edf

--- a/Src/web/eiffel-org/site/themes/responsive-eiffel-org/assets/scss/site/download_product.scss
+++ b/Src/web/eiffel-org/site/themes/responsive-eiffel-org/assets/scss/site/download_product.scss
@@ -49,6 +49,11 @@ table.download_decorator {
 	}
 }
 
+div.col #block-download_area {
+        margin-top: 5.3rem;
+}
+
+
 //#block-download_area {
 //	.holder {
 //		border: none;
